--- a/src/app/Components/Widgets/sidebar/sidebar.component.html
+++ b/src/app/Components/Widgets/sidebar/sidebar.component.html
@@ -5,14 +5,13 @@
   </div>
   <ul class="nav-list">
     <li><a routerLink="/home" routerLinkActive="active" class="nav-item"><i class="fas fa-home"></i> <span>Home</span></a></li>
-    <li><a routerLink="/products" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllProducts</span></a></li>
-    <li><a routerLink="/categories" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllCategory</span></a></li>
-    <li><a routerLink="/brands" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>Allbrands</span></a></li>
-    <li><a routerLink="/mails" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllMials</span></a></li>
-    <li><a routerLink="/AllOffer" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllOffer</span></a></li>
-    <!-- <li><a routerLink="/brands" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllUsers</span></a></li>
-    <li><a routerLink="/brands" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllTicket</span></a></li>
-    <li><a routerLink="/brands" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllWishlists</span></a></li> -->
+    <li><a routerLink="/admin/products" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllProducts</span></a></li>
+    <li><a routerLink="/admin/categories" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllCategory</span></a></li>
+    <li><a routerLink="/admin/brands" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>Allbrands</span></a></li>
+    <li><a routerLink="/admin/mails" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllMials</span></a></li>
+    <li><a routerLink="/admin/offers" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllOffer</span></a></li>
+    <li><a routerLink="/admin/roles" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>AllRoles</span></a></li>
+    <li><a routerLink="/admin/wishlist" routerLinkActive="active" class="nav-item"><i class="fas fa-tag"></i> <span>Allwishlist</span></a></li>
     <li><a routerLink="/register" routerLinkActive="active" class="nav-item"><i class="fas fa-user-circle"></i> <span>register</span></a></li>
     <li><a routerLink="/login" routerLinkActive="active" class="nav-item"><i class="fas fa-cog"></i> <span>login</span></a></li>
     <li><a routerLinkActive="active" class="btn btn-danger" (click)="logout()" class="nav-item"><i class="fas fa-sign-out-alt"></i><span>logout</span></a></li>
