--- a/src/app/Components/Pages/wishlist/wishlist.component.scss
+++ b/src/app/Components/Pages/wishlist/wishlist.component.scss
@@ -1,5 +1,5 @@
 // Reusing the styles from all-offers.component for consistency
-@import '../offers/all-offers/all-offers.component.scss';
+// @import '../offers/all-offers/all-offers.component.scss';
 
 // Specific style for the remove button on the wishlist page
 .wishlist-btn.active {
